force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who asked for the requirement</description>
    <inlineHelpText>Who is this requirement for?  this person has a need and will help them with their job. The demo and UAT sign off happens with this person</inlineHelpText>
    <label>Business Owner</label>
    <referenceTo>MPM4_BASE__Milestone1_Resource__c</referenceTo>
    <relationshipLabel>Tasks (Business Owner)</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>