force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Actual_Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Actual_Finish_Date__c</fullName>
    <inlineHelpText>The date the work actually finished.</inlineHelpText>
    <label>Actual Finish Date</label>
    <type>Date</type>
</CustomField>