force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Billable_Expense__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Billable_Expense__c</fullName>
    <inlineHelpText>Calculated from all child expense records</inlineHelpText>
    <label>Billable Expense</label>
    <summarizedField>MPM4_BASE__Milestone1_Expense__c.MPM4_BASE__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>MPM4_BASE__Milestone1_Expense__c.MPM4_BASE__Billable__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>MPM4_BASE__Milestone1_Expense__c.MPM4_BASE__Project_Task__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>