force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Index_Helper__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Index_Helper__c</fullName>
    <formula>IF( ISNULL(MPM4_BASE__Resource__r.MPM4_BASE__User__c) , 
MPM4_BASE__Resource__r.MPM4_BASE__Contact__r.FirstName &amp; &apos; &apos; &amp; MPM4_BASE__Resource__r.MPM4_BASE__Contact__r.LastName &amp; &apos; &apos; &amp; MPM4_BASE__Project_Milestone__r.MPM4_BASE__Project__r.Name &amp; &apos; &apos; &amp; MPM4_BASE__Project_Milestone__r.Name &amp; &apos; complete:&apos; &amp; IF(MPM4_BASE__Complete__c, &apos;yes&apos;, &apos;no&apos;) &amp; &apos; &apos; &amp; Name 
, 
MPM4_BASE__Resource__r.MPM4_BASE__User__r.FirstName &amp; &apos; &apos; &amp; MPM4_BASE__Resource__r.MPM4_BASE__User__r.LastName &amp; &apos; &apos; &amp; MPM4_BASE__Project_Milestone__r.MPM4_BASE__Project__r.Name &amp; &apos; &apos; &amp; MPM4_BASE__Project_Milestone__r.Name &amp; &apos; complete:&apos; &amp; IF(MPM4_BASE__Complete__c, &apos;yes&apos;, &apos;no&apos;) &amp; &apos; &apos; &amp; Name
)</formula>
    <label>Index Helper</label>
    <type>Text</type>
</CustomField>