force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Manually_Override_Resource_Allocation__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Manually_Override_Resource_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When unchecked, the daily resource allocation for this task will be automatically calculated. Enable this setting to manually populate daily resource allocation.</inlineHelpText>
    <label>Manually Override Resource Allocation</label>
    <type>Checkbox</type>
</CustomField>