force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__MyTask__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__MyTask__c</fullName>
    <description>Whether the current user is assigned to the task being viewed. This field may be inaccurate if a large number of resources are assigned to this task.</description>
    <formula>IF(OR(AND(MPM4_BASE__Resources_Assigned__c != null, OR(CONTAINS(MPM4_BASE__Resources_Assigned__c, $User.FirstName + &apos; &apos; + $User.LastName), CONTAINS(MPM4_BASE__Resources_Assigned__c, RIGHT($User.Id, 8)))), AND(MPM4_BASE__Resource__c != null, MPM4_BASE__Resource__r.MPM4_BASE__User__c != null, MPM4_BASE__Resource__r.MPM4_BASE__User__c == $User.Id)), true, false)</formula>
    <inlineHelpText>Whether the current user is assigned to the task being viewed. This field may be inaccurate if a large number of resources are assigned to this task.</inlineHelpText>
    <label>My Task</label>
    <type>Checkbox</type>
</CustomField>