force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Percent_Of_Project__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Percent_Of_Project__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The percentage of the entire Project that the work required to complete this Task makes up. If filled out this helps to create a more accurate precent complete at the project level.</description>
    <label>Percent of Entire Project</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>