force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Project__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Project__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; MPM4_BASE__Project_Milestone__r.MPM4_BASE__Project__c, MPM4_BASE__Project_Milestone__r.MPM4_BASE__Project__r.Name,&apos;_self&apos;)</formula>
    <inlineHelpText>A link to the Project which this task is included in via its milestone.</inlineHelpText>
    <label>Project</label>
    <type>Text</type>
</CustomField>