force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Resource_Workday_Duration__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Resource_Workday_Duration__c</fullName>
    <description>Used by Apex task trigger to calculate the task due date via estimated hours. Saves a query in the transaction.</description>
    <formula>MPM4_BASE__Resource__r.MPM4_BASE__Resource_Workday_Duration__c</formula>
    <label>Resource Workday Duration</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>