force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Resources_Assigned__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Resources_Assigned__c</fullName>
    <description>This field contains the names of all resources assigned via the Task Resource object. This field is updated automatically.</description>
    <inlineHelpText>This field contains the names of all resources assigned via the Task Resource object. This field is updated automatically.</inlineHelpText>
    <label>Resources Assigned</label>
    <type>TextArea</type>
</CustomField>