force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/validationRules/MPM4_BASE__CannotBeCanceledIfComplete.validationRule-meta.xml
<ValidationRule>
    <fullName>MPM4_BASE__CannotBeCanceledIfComplete</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(MPM4_BASE__Cancelled__c == true, MPM4_BASE__Complete__c == true), true, false)</errorConditionFormula>
    <errorDisplayField>MPM4_BASE__Task_Stage__c</errorDisplayField>
    <errorMessage>You cannot mark a completed task as canceled.</errorMessage>
</ValidationRule>