force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/validationRules/MPM4_BASE__InactiveUserAssigned.validationRule-meta.xml
<ValidationRule>
    <fullName>MPM4_BASE__InactiveUserAssigned</fullName>
    <active>true</active>
    <errorConditionFormula>AND(MPM4_BASE__Resource__c != null, MPM4_BASE__Resource__r.MPM4_BASE__Inactive_User__c)</errorConditionFormula>
    <errorDisplayField>MPM4_BASE__Resource__c</errorDisplayField>
    <errorMessage>You cannot assign the Project Task to a Resource for an inactive User.</errorMessage>
</ValidationRule>