force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/validationRules/MPM4_BASE__Start_Date_after_Predecessor_Due_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>MPM4_BASE__Start_Date_after_Predecessor_Due_Date</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISNULL(MPM4_BASE__Start_Date__c)) &amp;&amp; NOT(ISNULL(MPM4_BASE__Predecessor_Task__r.MPM4_BASE__Due_Date__c)) &amp;&amp; MPM4_BASE__Start_Date__c &lt; MPM4_BASE__Predecessor_Task__r.MPM4_BASE__Due_Date__c</errorConditionFormula>
    <errorDisplayField>MPM4_BASE__Start_Date__c</errorDisplayField>
    <errorMessage>Task Start Date must not be earlier than its Predecessor&apos;s Due Date.</errorMessage>
</ValidationRule>